<resources>
    <string name="app_name">蓝牙遥控</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="app_empty"> </string>
    <string name="app_zero">0</string>
    <string name="app_add">添加</string>
    <string name="app_close">关闭</string>
    <string name="app_edit">修改</string>
    <string name="app_more">更多</string>
    <string name="app_rename">更名</string>
    <string name="app_delete">删除</string>
    <string name="app_done">确认</string>
    <string name="app_display">展示</string>
    <string name="app_cancel">取消</string>
    <string name="app_clear">清除</string>
    <string name="app_down">下</string>
    <string name="app_read">读取</string>
    <string name="app_pin">固定</string>
    <string name="app_type">类型</string>
    <string name="app_color">颜色(RGB)</string>

    <string name="first_loc">位置信息权限用于使用你的手机发现附件的蓝牙</string>
    <string name="first_skip">跳过</string>

    <string name="menu_device">设备</string>
    <string name="menu_setting">设置</string>
    <string name="menu_batch">批量</string>
    <string name="menu_all">全选</string>
    <string name="menu_invert">反选</string>
    <string name="menu_server">服务器</string>
    <string name="menu_help">帮助</string>
    <string name="menu_feedback">帮助与反馈</string>
    <string name="menu_share">分享</string>
    <string name="menu_about">关于</string>
    <string name="menu_night">夜间</string>

    <string name="scan_scanning">扫描中</string>
    <string name="scan_result">扫描结果</string>
    <string name="scan_save">已保存设备</string>
    <string name="scan_connect">连接</string>

    <string name="command_send">发送</string>
    <string name="command_hint">点击输入指令</string>
    <string name="command_hex">0x</string>
    <string name="command_text">指令</string>

    <string name="device_time">创建于: </string>

    <string name="quick_text">快捷指令</string>

</resources>