<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity">

    <ImageView
        android:id="@+id/first_loc_image"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_loc"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/text_bold"
        app:layout_constraintTop_toBottomOf="@+id/first_loc_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="13sp"
        android:text="@string/first_loc"/>

    <TextView
        android:id="@+id/first_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/button_primary_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="52dp"
        android:text="@string/first_skip"/>

</androidx.constraintlayout.widget.ConstraintLayout>