<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/top_round_white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/quick_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        android:text="@string/quick_text"
        android:theme="@style/text_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <ImageButton-->
<!--        android:id="@+id/quick_pin"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@android:color/transparent"-->
<!--        android:contentDescription="@string/app_pin"-->
<!--        android:src="@drawable/ic_pin"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/quick_text"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/quick_add"-->
<!--        app:layout_constraintTop_toTopOf="@+id/quick_text" />-->

    <ImageButton
        android:id="@+id/quick_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_down"
        android:src="@drawable/ic_down"
        app:layout_constraintBottom_toBottomOf="@+id/quick_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/quick_text" />

    <ImageButton
        android:id="@+id/quick_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_add"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="@+id/quick_text"
        app:layout_constraintEnd_toStartOf="@+id/quick_down"
        app:layout_constraintTop_toTopOf="@+id/quick_text" />

    <com.fireflyest.netcontrol.layout.ColorfulBar
        android:id="@+id/quick_first_bar"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:progress="50"
        app:x1="200dp"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        app:layout_constraintStart_toStartOf="@+id/quick_text"
        app:layout_constraintTop_toBottomOf="@+id/quick_text"/>

    <com.fireflyest.netcontrol.layout.WhiteBar
        android:id="@+id/quick_second_bar"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="22dp"
        android:progress="50"
        app:x1="200dp"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        app:layout_constraintStart_toStartOf="@+id/quick_text"
        app:layout_constraintTop_toBottomOf="@+id/quick_first_bar"/>

    <TextView
        android:id="@+id/quick_first_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/round_background"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/app_zero"
        app:layout_constraintTop_toTopOf="@+id/quick_first_bar"
        app:layout_constraintBottom_toBottomOf="@+id/quick_first_bar"
        app:layout_constraintStart_toEndOf="@+id/quick_first_bar"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/quick_second_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/round_background"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/app_zero"
        app:layout_constraintTop_toTopOf="@+id/quick_second_bar"
        app:layout_constraintBottom_toBottomOf="@+id/quick_second_bar"
        app:layout_constraintStart_toEndOf="@+id/quick_second_bar"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/quick_second_bar">

        <include layout="@layout/layout_quick_buttons"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>