<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="?attr/background"
    tools:context=".QuickActivity">

    <include layout="@layout/toolbar_sub"/>

    <LinearLayout
        android:id="@+id/quick_edit_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_sub">

        <include layout="@layout/layout_quick_buttons" />

    </LinearLayout>
    

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/quick_edit_box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/quick_edit_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingHorizontal="22dp"
        android:paddingTop="16dp"
        android:background="@drawable/top_round_white">

        <TextView
            android:id="@+id/quick_edit_command_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/command_text"
            android:theme="@style/text_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/quick_edit_command"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/quick_edit_command_text"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints=""
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/quick_edit_display_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_display"
            android:layout_marginTop="12dp"
            android:theme="@style/text_bold"
            app:layout_constraintTop_toBottomOf="@+id/quick_edit_command"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/quick_edit_display"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/quick_edit_display_text"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints=""
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/quick_edit_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_type"
            android:theme="@style/text_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/quick_edit_type"/>

        <NumberPicker
            android:id="@+id/quick_edit_type"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@+id/quick_edit_type_text"
            app:layout_constraintBottom_toBottomOf="@+id/quick_edit_display"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/quick_edit_display"/>

        <TextView
            android:id="@+id/quick_edit_color_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_color"
            android:theme="@style/text_bold"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/quick_edit_display"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_background"
            app:layout_constraintTop_toBottomOf="@+id/quick_edit_color_text">

            <SeekBar
                android:id="@+id/quick_edit_color_R"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:max="255"/>

            <SeekBar
                android:id="@+id/quick_edit_color_G"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:max="255"/>

            <SeekBar
                android:id="@+id/quick_edit_color_B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:max="255"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>