<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="?attr/background"
    tools:context=".DeviceActivity">

    <include layout="@layout/toolbar_device"/>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/device_motion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_sub"
        app:layout_constraintStart_toStartOf="parent"
        app:layoutDescription="@xml/device_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/device_confirm_box"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/round_white"
            app:layout_constraintStart_toEndOf="@+id/device_box"
            app:layout_constraintBottom_toBottomOf="@+id/device_box">

            <ImageButton
                android:id="@+id/device_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="6dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_done"
                android:src="@drawable/ic_done"/>

            <ImageButton
                android:id="@+id/device_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="6dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_close"
                android:src="@drawable/ic_close"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/device_box"
            android:layout_width="0dp"
            android:layout_height="136dp"
            android:background="@drawable/round_white"
            android:layout_marginHorizontal="16dp"
            android:padding="22dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/device_rename_box">

            <TextView
                android:id="@+id/select_name"
                android:transitionName="device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/text_bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/select_address"
                android:transitionName="device_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/select_name"
                app:layout_constraintStart_toStartOf="@+id/select_name"/>

            <TextView
                android:id="@+id/device_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/select_name"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/device_rename_box"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_white"
            app:layout_constraintStart_toEndOf="@+id/device_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/device_box">

            <EditText
                android:id="@+id/device_rename_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/device_rename"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:autofillHints=""
                android:inputType="text"
                tools:ignore="LabelFor" />

            <ImageButton
                android:id="@+id/device_rename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="6dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_rename"
                android:src="@drawable/ic_rename"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/device_delete_box"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_white"
            app:layout_constraintStart_toStartOf="@+id/device_rename_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/device_box">

            <ImageButton
                android:id="@+id/device_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_delete"
                android:src="@drawable/ic_delete"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/device_char_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/device_motion"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>